2000-12-11  Mike Fleming  <mfleming@eazel.com>

	* libgnomevfs/gnome-vfs-result.c:
	* libgnomevfs/gnome-vfs-types.h:
	* modules/http-method.c: (do_make_directory), (do_move):

	bugzilla.eazel.com 3942 -- renaming file to illegal name produces
	confusing response.

	do_move now returns GNOME_VFS_ERROR_BAD_PARAMETERS when the destination
	filename contains invalid characters.  This is really an unfortunate
	mapping, but it mirrors what Linux's FAT drivers seem to do (they return
	EINVAL).

2000-12-11  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-gen-mimedb.c:
	Removed the source and build rules for the obsolete
	gen-mime-db tool. We have parsed the MIME text files on
	when the library first needs the DB instead of saving
	a preparsed memory image for some time now.

2000-12-08  Pavel Cisler  <pavel@eazel.com>

	* modules/ftp-method.c: (do_read_directory):
	Oops. Fix the build.

2000-12-08  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

	* libgnomevfs/gnome-vfs-mime.c: (gnome_vfs_mime_type_from_name),
	(gnome_vfs_get_mime_type), (gnome_vfs_get_file_mime_type),
	(gnome_vfs_get_mime_type_from_uri),
	(gnome_vfs_get_mime_type_from_file_data):
	* libgnomevfs/gnome-vfs-mime.h:
	* modules/ftp-method.c: (ls_to_file_info):
	* modules/gconf-method.c: (set_mime_type_value):
	* modules/pipe-method.c: (mime_from_uri):
	* modules/translate-method.c: (tr_apply_default_mime_type):
	Replace all cases of "application/octet-stream" with a new symbolic
	name, GNOME_VFS_MIME_TYPE_UNKNOWN.

2000-12-08  Gene Z. Ragan  <gzr@eazel.com>

	* modules/ftp-method.c: (do_read_directory):
	Removed fixme for bug 3925.  This was fixed in Nautilus.
	Resolving sym links during a directory read in the ftp module
	is resource intensive and probably not desired.

2000-12-08  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>
